# vio_learn

./: .clang-format  .gitignore  CMakeLists.txt  README.md
config/: euroc_config.yaml  sim_config.yaml
src/: CMakeLists.txt
src/vio_data_sim/: CMakeLists.txt
src/vio_data_sim/output/: imu_integ_noise_pose.txt  imu_pose.txt
src/vio_data_sim/scripts/: draw_traj.py
src/vio_data_sim/src/: gen_imu.cc  imu.hpp  params.hpp  utilities.hpp
src/vio_slam/: CMakeLists.txt
src/vio_slam/src/ba_optimization/: MonoBA.cc
src/vio_slam/src/backend/: edge.cc  edge.hh  edge_reprojection.cc  edge_reprojection.hh  eigen_types.hh  problem.cc  problem.hh  problem_schur.cc  problem_schur.hh  vertex.cc  vertex.hh  vertex_inverse_depth.hh  vertex_point_xyz.hh  vertex_pose.cc  vertex_pose.hh
src/vio_slam/src/ch07_vins_init/code_vins_sys/: CMakeLists.txt
src/vio_slam/src/ch07_vins_init/code_vins_sys/config/: sim_config.yaml
src/vio_slam/src/ch07_vins_init/code_vins_sys/include/factor/: integration_base.h
src/vio_slam/src/ch07_vins_init/code_vins_sys/src/: estimator.cpp  feature_manager.cpp
src/vio_slam/src/ch07_vins_init/code_vins_sys/src/initial/: initial_aligment.cpp
src/vio_slam/src/ch07_vins_init/code_vins_sys/test/: run_euroc.cpp
src/vio_slam/src/curve_fitting/: curve_fitting.cc
src/vio_slam/src/curve_fitting/scripts/: data_mu.txt  draw_data.py
src/vio_slam/src/nullspace/: README.md  hessian_nullspace_test.cc
src/vio_slam/src/triangulation/: triangulation.cc
src/vio_slam/src/vins_code/: feature_manager.hh  feature_track.cc  feature_track.hh  system.cc  system.hh  system_config.cc  system_config.hh  tic_toc.hh  utility.hh
src/vio_slam/src/vins_code/app/: run_eruco.cc  run_eurco.cc
src/vio_slam/src/vins_code/backend/: edge.cc  edge.hh  edge_imu.cc  edge_imu.hh  edge_prior.cc  edge_prior.hh  edge_reprojection.cc  edge_reprojection.hh  eigen_types.hh  problem.cc  problem.hh  problem_schur.cc  problem_schur.hh  vertex.cc  vertex.hh  vertex_inverse_depth.hh  vertex_point_xyz.hh  vertex_pose.cc  vertex_pose.hh  vertex_speedbias.hh
src/vio_slam/src/vins_code/factor/: integration_base.hh
vio_data_sim/: CMakeLists.txt
vio_data_sim/output/: imu_integ_pose.txt  imu_pose_noise.txt
vio_data_sim/src/: gen_imu.cc  imu.hpp  utilities.hpp
